--- a/scripts-local.html
+++ b/scripts-local.html
@@ -1,6 +1,6 @@
 
 <script>
-// vim: ts=3
+// vim: ts=3:nowrap
 
 
 
@@ -33,7 +33,8 @@ function storeData(obj, sheet, json) {
 
 //////////////////////////////
 //
-// mergeContents --
+// mergeContents -- Merge contents of separate spreadsheets into a single
+//   database indexed by the "Key" field common to all worksheets.
 //
 
 function mergeContents(obj, target, sheets) {
@@ -63,9 +64,10 @@ function mergeContents(obj, target, sheets) {
 }
 
 
+
 //////////////////////////////
 //
-// displaySearchFields -- 
+// displaySearchFields -- Show search fields for browse page.
 //
 
 function displaySearchFields(data, target) {
@@ -77,6 +79,7 @@ function displaySearchFields(data, target) {
 
 	let output = "";
 	output += buildSelect(data, "Composer");
+	output += buildSelect(data, "Librettist");
 	output += buildSelect(data, "Theater");
 	
 	element.innerHTML = output;
@@ -86,7 +89,11 @@ function displaySearchFields(data, target) {
 
 //////////////////////////////
 //
-// buildSelectPerson -- {};
+// buildSelectPerson -- Create select menu for persons.  These fields
+//    can contain parenthetical content such as "(attrib.) as well as
+//    multiple people in one entry.  When there are multiple people or
+//    other complications, the name is enclosed in curly brackets so that
+//    they can be extracted as separate entities for the select menu.
 //
 
 function buildSelectPerson(data, source) {
@@ -144,6 +151,9 @@ function buildSelect(data, source) {
 	if (source == "Composer") {
 		return buildSelectPerson(data, source);
 	}
+	if (source == "Librettist") {
+		return buildSelectPerson(data, source);
+	}
 
 	let holder = {};
 	for (let i=0; i<data.length; i++) {
@@ -187,17 +197,21 @@ function displaySearchResults(results, target) {
 	output += "<table>";
 	output += "<tr>";
 	output += "<th>Key</th>";
+	output += "<th>Sorting date</th>";
 	output += "<th>Work title</th>";
 	output += "<th>Composer</th>";
+	output += "<th>Librettist</th>";
 	output += "<th>Theater</th>";
 	output += "</tr>";
 
 	for (let i=0; i<results.length; i++) {
 		output += "<tr>";
 		output += `<td>${results[i]["Key"]}</td>`;
+		output += `<td class="nobreak">${results[i]["Sorting date"]}</td>`;
 		output += `<td>${results[i]["Work title"]}</td>`;
 		output += `<td>${removeCurly(results[i]["Composer"])}</td>`;
-		output += `<td>${results[i]["Theater"]}</td>`;
+		output += `<td>${removeCurly(results[i]["Librettist"])}</td>`;
+		output += `<td class="nobreak">${results[i]["Theater"]}</td>`;
 		output += "</tr>";
 	}
 
@@ -253,6 +267,10 @@ function filterResults(input, field, query) {
 	let output = [];
 	for (let i=0; i<input.length; i++) {
 		if (field === "Composer") {
+			if (input[i][field].match(query)) {
+				output.push(input[i]);
+			}
+		} else if (field === "Librettist") {
 			if (input[i][field].match(query)) {
 				output.push(input[i]);
 			}
