--- a/styles-local.html
+++ b/styles-local.html
@@ -18,5 +18,17 @@ table tr:hover {
 	background: #ff000011;
 }
 
+input::placeholder {
+	font-style: italic;
+	color: #aaa;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
 </style>
 
