--- a/styles-local.html
+++ b/styles-local.html
@@ -14,6 +14,7 @@ table.opera th {
 	padding-left: 3px;
 	padding-right: 3px;
 	top: 0;
+	cursor: pointer;
 }
 
 table.opera td {
@@ -83,6 +84,22 @@ button:focus {
 
 #search-count {
 	font-size: 1.5rem;
+}
+
+.button {
+	font-family: Tahoma;
+	font-size: 1rem;
+	display: inline-block;
+	background: darkred;
+	color: white;
+	border-radius: 7px;
+	padding: 7px;
+}
+
+.button:hover {
+	background: red;
+	color: black;
+	cursor: pointer;
 }
 
 </style>
